# wally-start

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.txt  README.md  setIP.sh
etc/: flags  wallyd.conf  wallyd.conf.in  wallypixel.conf  wallystart.conf  wallystart.conf.oem  wallystart.conf.pi  wallystart.conf.recovery  wallystart.conf.recovery.pi
etc/init.d/: S02wallystart
src/: CMakeLists.txt  autoversion.h.in  clinkt.cpp  esUtil.h  kmscube.c  kmsraw.c  low_level.h  pixel.cpp  pixel.h  slog.c  slog.h  tcp.cpp  tcp.h  wally-release.in  wally.h  wallyc.cpp  wallylib.c  wallylistener.c  wallylistener.h  wallypixel.cpp  wallypixel.h  wallystart.c  wallystart.h  wallyvideo.c  wallyvideo.h
