set(TEST_SRC drmtest.c)

# On Linux build some KMS / DRM Test programms
if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  if(NOT ${RASPBERRY} MATCHES "ON")
    pkg_check_modules(LIBDRM libdrm)
    pkg_check_modules(LIBBCM libbcm2835)
    pkg_check_modules(LIBDRI libdri)
    pkg_check_modules(LIBGLES2 libglesv2)
    pkg_check_modules(LIBGBM libgbm)
    set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DMESA_EGL_NO_X11_HEADERS")
    add_executable(kmscube kmscube.c esTransform.c)
    add_executable(kmsraw kmsraw.c)
    target_link_libraries(kmscube EGL GLESv2 gbm m kms drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
    target_link_libraries(kmsraw EGL GLESv2 ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES})
    include_directories(${LIBDRI_INCLUDE_DIRS} ${LIBGLES2_INCLUDE_DIRS} ${LIBGBM_INCLUDE_DIRS} ${LIBDRM_INCLUDE_DIRS} ${LIBPNG_INCLUDE_DIRS})
    install(TARGETS kmscube DESTINATION ${BIN_INSTALL_DIR})
    install(TARGETS kmsraw DESTINATION ${BIN_INSTALL_DIR})
  endif()
endif()

if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm")
  set(RPIBCM_LIBS bcm_host)
  set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} ${RPI_C_FLAGS}")
#  set(WALLYP wallypixel.cpp slog.c wallylistener.c pixel.cpp clinkt.cpp low_level.cpp)
#  set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DWALLYPIXEL -DRASPBERRY")
#  add_executable(wallypixel ${WALLYP})
#  target_link_libraries(wallypixel pthread ${LIBBCM_LIBRARIES})
#  install(TARGETS wallypixel DESTINATION ${BIN_INSTALL_DIR})
endif()

set(WALLYC_SRC wallyc.cpp tcp.cpp)
add_executable(wallyc ${WALLYC_SRC})
target_link_libraries(wallyc)
install(TARGETS wallyc DESTINATION ${BIN_INSTALL_DIR})

set(WALLYS wallystart.c slog.c wallylistener.c)
set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DWALLYSTART")
add_executable(wallystart ${WALLYS})
target_link_libraries(wallystart ${LIBSDL_LIBRARIES} ${LIBSDLIMG_LIBRARIES} ${LIBSDLTTF_LIBRARIES} SDL2_gfx pthread ${RPI_LD_FLAGS} ${RPIBCM_LIBS})
install(TARGETS wallystart DESTINATION ${BIN_INSTALL_DIR})

set(WALLYV wallyvideo.c slog.c wallylistener.c)
include_directories(${FFMPEG_INCLUDES})
set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DWALLYVIDEO -Wno-deprecated-declarations")
add_executable(wallyvideo ${WALLYV})
target_link_libraries(wallyvideo ${LIBSDL_LIBRARIES} ${LIBSDLIMG_LIBRARIES} ${LIBSDLTTF_LIBRARIES} SDL2_gfx pthread ${FFMPEG_LIBRARIES} ${LIBAVUTIL_LIBRARIES} swscale ${RPIBCM_LIBS})
install(TARGETS wallyvideo DESTINATION ${BIN_INSTALL_DIR})
